@@ -1,6 +1,10 @@
 --------------------------
 Darshan Release Change Log
 --------------------------
+darshan-1.1.13
+==============
+* updated compiler scripts to fix link order in some cases with -lhdf5
+
 darshan-1.1.12
 ==============
 * improved mapping of file records to mount points
